--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^0.27.2",
     "react": "^18.1.0",
+    "react-countup": "^6.2.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
