added coffee mug favicon

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,10 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "gass.dev",
+  "name": "Engineer & Programmer",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "src": "coffee-favicon",
+      "sizes": "64x64 32x32 24x26 16x16",
       "type": "image/x-icon"
     }
   ],
