--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "torando",
   "version": "0.1.0",
+  "homepage": "https://gass-git.github.io",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.0",
@@ -22,6 +23,8 @@
     "use-sound": "^4.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -44,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
