--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "torando",
   "version": "0.1.0",
-  "homepage": "https://gass-git.github.io/home",
+  "homepage": "https://gass-git.github.io/mechanised/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.0",
